print env hardcoded

--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Print env var
         run: |
           printenv
+      - name: udvalgte env var
+        run: |
+          echo startenv
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
